added 1 sentence description

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hi, this is the personal website of Nicholas Rees. I'll be fleshing out this site over the summer.
+Hi, this is the personal website of Nicholas Rees.
+I am an undergraduate studying math at UBC, expected to graduate Spring 2025.<br />
+I'll be fleshing out this site over the summer.
