html formatting, made style

--- a/index.html
+++ b/index.html
@@ -1,3 +1,30 @@
-Hi, this is the personal website of Nicholas Rees.
-I am an undergraduate studying math at UBC, expected to graduate Spring 2025.<br />
-I'll be fleshing out this site over the summer.
+<!DOCTYPE html>
+<html lang="en-CA">
+	<head>
+		<meta charset="utf-8">
+		<title>Nicholas Rees</title>
+		<link rel="stylesheet" type="text/css" href="./style.css">
+		<!-- Getting EB Garamond -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+	</head>
+	<body>
+		<h1>
+			Nicholas Rees
+		</h1>
+		<main>
+			<p>
+				Hi, this is the personal website of Nicholas Rees.
+				I am an undergraduate studying math at UBC, expected to graduate Spring 2025.<br>
+				You can reach me at nicholaskrees &ltat&gt gmail &ltdot&gt com.<br>
+				I'll be fleshing out this site over the summer.
+			</p>
+		</main>
+		<footer>
+			<script>
+				document.write ("Website last updated: " + document.lastModified);
+			</script>
+		</footer>
+	</body>
+</html>
