--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
 		</h1>
 		<main>
 			<p>
-				Hi, this is the personal website of Nicholas Rees.
+				Hi, this is the personal website of Nicholas Rees.<br>
 				I am an undergraduate studying math at UBC, expected to graduate Spring 2025.<br>
 				You can reach me at nicholaskrees &ltat&gt gmail &ltdot&gt com.<br>
 				I'll be fleshing out this site over the summer.
+			</p>
+			<p>
+				... only the deep inner movement, only the indescrible motions of the heart,<br>
+				only these convince you that what you have recognized `belongs unto you' ...<br>
+				for only the truth that edifies is the truth for you.<br>
+				- S&oslashren Kierkegaard, <i>Either/Or</i>
 			</p>
 		</main>
 		<footer>
