--- a/index.html
+++ b/index.html
@@ -11,19 +11,34 @@
 	</head>
 	<body>
 		<h1>
-			Nicholas Rees
+			<a href="./index.html">Nicholas Rees</a>
 		</h1>
+		<ul class="list-inline">
+			<li> <a href="./vita/index.html">Vita</a> </li>
+			<li> <a href="./talks/index.html">Talks</a> </li>
+			<li> <a href="./extra/index.html">Extra</a> </li>
+		</ul>
 		<main>
 			<p>
 				Hi, this is the personal website of Nicholas Rees.<br>
-				I am an undergraduate studying math at UBC, expected to graduate Spring 2025.<br>
-				You can reach me at nicholaskrees &ltat&gt gmail &ltdot&gt com.<br>
-				I'll be fleshing out this site over the summer.
+				I am an undergraduate studying math at UBC, expected to graduate Spring 2025.
+				I am currently <br> looking for admission in Fall 2025 to
+				graduate programs in pure mathematics.
+				My interests are <br> largely related to analysis.
+				Some current topics that I could see myself working on
+				include problems in harmonic analysis,
+				particularly those with geometric connections.
+				This has drawn me to the <br> Fourier restriction conjecture,
+				Kakeya conjecture, and other connections with discrete and fractal <br> geometry.
+				I am also interested in exploring topics in additive combinatorics.
 			</p>
 			<p>
-				... only the deep inner movement, only the indescrible motions of the heart,<br>
-				only these convince you that what you have recognized `belongs unto you' ...<br>
-				for only the truth that edifies is the truth for you.<br>
+				You can reach me at nicholaskrees &ltat&gt gmail &ltdot&gt com.<br>
+				This site is still under construction,
+				so bear with me if it is a little rough around the edges.
+			</p>
+			<p>
+				...for only the truth that edifies is the truth for you.<br>
 				- S&oslashren Kierkegaard, <i>Either/Or</i>
 			</p>
 		</main>
