--- a/index.html
+++ b/index.html
@@ -20,17 +20,31 @@
 		</ul>
 		<main>
 			<p>
+				<img src="./data/portrait1.JPG" alt="Me" width="400">
+			</p>
+			<p>
 				Hi, this is the personal website of Nicholas Rees.<br>
 				I am an undergraduate studying math at UBC, expected to graduate Spring 2025.
 				I am currently <br> looking for admission in Fall 2025 to
 				graduate programs in pure mathematics.
 				My interests are <br> largely related to analysis.
 				Some current topics that I could see myself working on
-				include problems in harmonic analysis,
-				particularly those with geometric connections.
-				This has drawn me to the <br> Fourier restriction conjecture,
-				Kakeya conjecture, and other connections with discrete and fractal <br> geometry.
-				I am also interested in exploring topics in additive combinatorics.
+				include problems in the intersection of
+				harmonic analysis and geometric measure theory,
+				such as those related to the Kakeya conjecture,
+				Fourier restriction, and fractal geometry.
+				I am also interested in related discrete <br> applications,
+				such as in additive combinatorics, analytic number theory,
+				and incidence geometry.
+			</p>
+			<p>
+				External to mathematics, I am also interested in AI safety
+				(both from a technical and policy <br> perspective).
+				Outside of academics, I enjoy hiking in nearby mountains,
+				rock climbing and <br> bouldering,
+				and playing/watching football (soccer) and basketball.
+				I also enjoy fooling around with some coding and my linux setup.
+				<a href="https://xkcd.com/356/">This comic sums me up pretty well.</a>
 			</p>
 			<p>
 				You can reach me at nicholaskrees &ltat&gt gmail &ltdot&gt com.<br>
@@ -38,7 +52,7 @@
 				so bear with me if it is a little rough around the edges.
 			</p>
 			<p>
-				...for only the truth that edifies is the truth for you.<br>
+				``... for only the truth that edifies is the truth for you.''<br>
 				- S&oslashren Kierkegaard, <i>Either/Or</i>
 			</p>
 		</main>
