Added a list of talks with description

--- a/talks/index.html
+++ b/talks/index.html
@@ -19,8 +19,41 @@
 		</ul>
 		<main>
 			<p>
-				This is where an online copy of some talks I have prepared will go.
+				This is where an online copy of some talks I have prepared will go.<br>
+				I will eventually attach pdf copies of slides/write-ups for those where this exists.
 			</p>
+			<ul>
+				<li> <b>Square Differences and Undergraduate Research</b> (March 2025) <br>
+					Invited speaker for UBC Math's undergraduate colloquium.
+					The talk highlighted easy to <br> understand components of some
+					of the research I did the previous summer, as well as <br> focused
+					on some of the day-to-day experiences as an undergraduate researcher
+					for students <br> currently looking to get more involved.</li>
+				<li> <b>An Introduction to the Fractal Uncertainty Principle </b> (December 2024) <br>
+					Made for credit in an introductory harmonic analysis course, UBC's Math 404/541.<br>
+					Introduces what the fractal uncertainty principle is,
+					similar to <a href="https://arxiv.org/abs/1903.02599"> Dyatlov's introductory article</a>,
+					but more aligned with what students of the class had covered.
+				</li>
+				<li> <b>A Look at the Fourier Transform</b> (July 2024) <br>
+					An expository talk for a general undergraduate audience at
+					the Canadian Undergraduate <br> Mathematics Conference.
+					Focused on a heuristic understanding of what the Fourier <br> transform is,
+					based off of the many different places it pops up
+					(Fourier series, the discrete <br> Fourier transform, etc.).
+				<li> <b>Density Increment Strategies</b> (June 2024) <br>
+					A talk delivered at a weekly seminar for current UBC undergraduate summer
+					researchers in mathematics.
+					Based off of the first section of <a href="https://www.juliawolf.org/teaching/iac_notes.pdf"> these notes by Julia Wolf</a>
+					and the first lecture of <a href="http://thomasbloom.org/teaching/DIAC.pdf"> these notes by Thomas Bloom</a>.
+				</li>
+				<li> <b>Avoiding Patterns in Sets: the Erdős Similarity Problem</b> (July 2023) <br>
+					Intended for a general undergraduate audience at
+					the Canadian Undergraduate <br> Mathematics Conferences.
+					Built up an understanding of what the Erdős Similarity Problem was,
+					as well as some known results and their implications.
+				</li>
+			</ul>
 		</main>
 	</body>
 </html>
