Updated some talks I missed

--- a/talks/index.html
+++ b/talks/index.html
@@ -20,7 +20,9 @@
 		<main>
 			<p>
 				This is where an online copy of some talks I have prepared will go.<br>
-				I will eventually attach pdf copies of slides/write-ups for those where this exists.
+				This page partially serves as a place for individuals to get a scope of my interests,
+				and partially for <br> me to keep an online copy of my slides/write-ups
+				(which will eventually be uploaded).
 			</p>
 			<ul>
 				<li> <b>Square Differences and Undergraduate Research</b> (March 2025) <br>
@@ -29,11 +31,24 @@
 					of the research I did the previous summer, as well as <br> focused
 					on some of the day-to-day experiences as an undergraduate researcher
 					for students <br> currently looking to get more involved.</li>
+				<li> <b>Proving Fermat's Last Theorem mod p</b> (March 2025) <br>
+					Delivered a talk for UBC's math circle, a weekly meeting for
+					local high schoolers interested <br> in mathematics.
+					I went through graph theoretic approach to
+					(dis)proving Fermat's Last <br> Theorem modulo a prime.
+					The presentation was based off of the introduction to <br>
+					<a href="https://yufeizhao.com/gtacbook/"> Yufei Zhao's book</a>,
+					as well as material presented in a course I was taking at the time.
+				</li>
 				<li> <b>An Introduction to the Fractal Uncertainty Principle </b> (December 2024) <br>
 					Made for credit in an introductory harmonic analysis course, UBC's Math 404/541.<br>
 					Introduces what the fractal uncertainty principle is,
 					similar to <a href="https://arxiv.org/abs/1903.02599"> Dyatlov's introductory article</a>,
 					but more aligned with what students of the class had covered.
+				</li>
+				<li> <b> UBC Math 220 Review Session </b> (December 2024) <br>
+					Hosted a review session for UBC's introduction to proofs course,
+					to help prepare students <br> for their final exam.
 				</li>
 				<li> <b>A Look at the Fourier Transform</b> (July 2024) <br>
 					An expository talk for a general undergraduate audience at
