fixed word breaks

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
 			<p>
 				Hi, this is the personal website of Nicholas Rees.<br>
 				I am an undergraduate studying math at UBC, expected to graduate Spring 2025.
-				I am currently <br> looking for admission in Fall 2025 to
+				I am currently looking for admission in Fall 2025 to
 				graduate programs in pure mathematics.
-				My interests are <br> largely related to analysis.
+				My interests are largely related to analysis.
 				Some current topics that I could see myself working on
 				include problems in the intersection of
 				harmonic analysis and geometric measure theory,
 				such as those related to the Kakeya conjecture,
 				Fourier restriction, and fractal geometry.
-				I am also interested in related discrete <br> applications,
+				I am also interested in related discrete applications,
 				such as in additive combinatorics, analytic number theory,
 				and incidence geometry.
 			</p>
 			<p>
 				External to mathematics, I am also interested in AI safety
-				(both from a technical and policy <br> perspective).
+				(both from a technical and policy perspective).
 				Outside of academics, I enjoy hiking in nearby mountains,
-				rock climbing and <br> bouldering,
+				rock climbing and bouldering,
 				and playing/watching football (soccer) and basketball.
 				I also enjoy fooling around with some coding and my linux setup.
 				<a href="https://xkcd.com/356/">This comic sums me up pretty well.</a>
