--- a/talks/index.html
+++ b/talks/index.html
@@ -19,43 +19,43 @@
 		</ul>
 		<main>
 			<p>
-				This is where an online copy of some talks I have prepared will go.<br>
+				This is where an online copy of some talks I have prepared will go.
 				This page partially serves as a place for individuals to get a scope of my interests,
-				and partially for <br> me to keep an online copy of my slides/write-ups
+				and partially for me to keep an online copy of my slides/write-ups
 				(which will eventually be uploaded).
 			</p>
 			<ul>
 				<li> <b>Square Differences and Undergraduate Research</b> (March 2025) <br>
 					Invited speaker for UBC Math's undergraduate colloquium.
-					The talk highlighted easy to <br> understand components of some
-					of the research I did the previous summer, as well as <br> focused
+					The talk highlighted easy to understand components of some
+					of the research I did the previous summer, as well as focused
 					on some of the day-to-day experiences as an undergraduate researcher
-					for students <br> currently looking to get more involved.</li>
+					for students currently looking to get more involved.</li>
 				<li> <b>Proving Fermat's Last Theorem mod p</b> (March 2025) <br>
 					Delivered a talk for UBC's math circle, a weekly meeting for
-					local high schoolers interested <br> in mathematics.
+					local high schoolers interested in mathematics.
 					I went through graph theoretic approach to
-					(dis)proving Fermat's Last <br> Theorem modulo a prime.
-					The presentation was based off of the introduction to <br>
+					(dis)proving Fermat's Last Theorem modulo a prime.
+					The presentation was based off of the introduction to
 					<a href="https://yufeizhao.com/gtacbook/"> Yufei Zhao's book</a>,
 					as well as material presented in a course I was taking at the time.
 				</li>
 				<li> <b>An Introduction to the Fractal Uncertainty Principle </b> (December 2024) <br>
-					Made for credit in an introductory harmonic analysis course, UBC's Math 404/541.<br>
+					Made for credit in an introductory harmonic analysis course, UBC's Math 404/541.
 					Introduces what the fractal uncertainty principle is,
 					similar to <a href="https://arxiv.org/abs/1903.02599"> Dyatlov's introductory article</a>,
 					but more aligned with what students of the class had covered.
 				</li>
 				<li> <b> UBC Math 220 Review Session </b> (December 2024) <br>
 					Hosted a review session for UBC's introduction to proofs course,
-					to help prepare students <br> for their final exam.
+					to help prepare students for their final exam.
 				</li>
 				<li> <b>A Look at the Fourier Transform</b> (July 2024) <br>
 					An expository talk for a general undergraduate audience at
-					the Canadian Undergraduate <br> Mathematics Conference.
-					Focused on a heuristic understanding of what the Fourier <br> transform is,
+					the Canadian Undergraduate Mathematics Conference.
+					Focused on a heuristic understanding of what the Fourier transform is,
 					based off of the many different places it pops up
-					(Fourier series, the discrete <br> Fourier transform, etc.).
+					(Fourier series, the discrete Fourier transform, etc.).
 				<li> <b>Density Increment Strategies</b> (June 2024) <br>
 					A talk delivered at a weekly seminar for current UBC undergraduate summer
 					researchers in mathematics.
@@ -64,7 +64,7 @@
 				</li>
 				<li> <b>Avoiding Patterns in Sets: the Erdős Similarity Problem</b> (July 2023) <br>
 					Intended for a general undergraduate audience at
-					the Canadian Undergraduate <br> Mathematics Conferences.
+					the Canadian Undergraduate Mathematics Conferences.
 					Built up an understanding of what the Erdős Similarity Problem was,
 					as well as some known results and their implications.
 				</li>
