--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	</head>
 	<body>
 		<h1>
-			<a href="./index.html">Nicholas Rees</a>
+			<a href="./">Nicholas Rees</a>
 		</h1>
 		<ul class="list-inline">
-			<li> <a href="./vita/index.html">Vita</a> </li>
-			<li> <a href="./talks/index.html">Talks</a> </li>
-			<li> <a href="./extra/index.html">Extra</a> </li>
+			<li> <a href="./vita">Vita</a> </li>
+			<li> <a href="./talks">Talks</a> </li>
+			<li> <a href="./extra">Extra</a> </li>
 		</ul>
 		<main>
 			<p>
@@ -38,7 +38,8 @@
 				and incidence geometry.
 			</p>
 			<p>
-				External to mathematics, I am also interested in AI safety
+				External to mathematics, I am also interested in formal proof assistants
+				and programming languages, as well as topics in AI safety
 				(both from a technical and policy perspective).
 				Outside of academics, I enjoy hiking in nearby mountains,
 				rock climbing and bouldering,
