--- a/talks/index.html
+++ b/talks/index.html
@@ -10,12 +10,12 @@
 	</head>
 	<body>
 		<h1>
-			<a href="../index.html">Nicholas Rees</a>
+			<a href="../">Nicholas Rees</a>
 		</h1>
 		<ul class="list-inline">
-			<li> <a href="../vita/index.html">Vita</a> </li>
-			<li> <a href="../talks/index.html">Talks</a> </li>
-			<li> <a href="../extra/index.html">Extra</a> </li>
+			<li> <a href="../vita">Vita</a> </li>
+			<li> <a href="../talks">Talks</a> </li>
+			<li> <a href="../extra">Extra</a> </li>
 		</ul>
 		<main>
 			<p>
