updated info for 2026

--- a/talks/index.html
+++ b/talks/index.html
@@ -25,6 +25,30 @@
 				(which will eventually be uploaded).
 			</p>
 			<ul>
+        <li> <b>Bogolyubov's lemma and Bohr sets</b> (January 2026)<br>
+          Part of a sequence of talks given by students at the end of a
+          selected topics course at the University of Bonn on higher-order Fourier analysis.
+          The talks aimed to present a proof of the inverse theorem for the
+          U<sup>3</sup> Gowers norm on arbitrary finite abelian groups
+          as done in <a href="https://arxiv.org/abs/2112.13759"> this paper</a>.
+          My talk focused on preliminary results: Bogolyubov's lemma, a statement about gauranteeing
+          a large Bohr set in 2A - 2A, and its further generalization when A is
+          the subset of a Bohr set, the latter making use of
+          some Fourier-analytic properties of Bohr sets.</li>
+        <li> <b> Kloosterman sums and applications to the circle method</b> (December 2025) <br>
+          Delivered as part of a graduate seminar at the University of Bonn,
+          covering the delta symbol method of Heath-Brown,
+          which establishes a quantitative Hasse principle for quadratic forms.
+          I went through some classic properties of Gauss and Kloosterman sums,
+          before applying them to produce explicit formulae for
+          the prime terms of the singular series.
+          The results I presented here were to be used in subsequent talks
+          to prove the results obtained in the original paper.
+        <li> <b> Progression-free sets in &#x2124;<sub>4</sub><sup>n</sup></b> (September 2025) <br>
+					Presentation delivered at the Kopf Summer School, whose focus was
+          on discrete directions in harmonic analysis.
+          This talk went through the proof by Croot, Lev, and Pach,
+          directly following <a href="https://arxiv.org/abs/1605.01506"> this paper</a>.</li>
 				<li> <b>Square Differences and Undergraduate Research</b> (March 2025) <br>
 					Invited speaker for UBC Math's undergraduate colloquium.
 					The talk highlighted easy to understand components of some
