--- a/index.html
+++ b/index.html
@@ -24,18 +24,16 @@
 			</p>
 			<p>
 				Hi, this is the personal website of Nicholas Rees.<br>
-				I am an undergraduate studying math at UBC, expected to graduate Spring 2025.
-				I am currently looking for admission in Fall 2025 to
-				graduate programs in pure mathematics.
-				My interests are largely related to analysis.
-				Some current topics that I could see myself working on
-				include problems in the intersection of
-				harmonic analysis and geometric measure theory,
-				such as those related to the Kakeya conjecture,
-				Fourier restriction, and fractal geometry.
-				I am also interested in related discrete applications,
-				such as in additive combinatorics, analytic number theory,
-				and incidence geometry.
+        I am a Masters student at the University of Bonn, studying pure mathematics.
+				My interests are largely related to number theory,
+        typically with an analytic flavour.
+        Some current areas are in the applications of ideas from
+        harmonic analysis, such as in higher-order Fourier analysis.
+        I also have some interest in problems originating from harmonic analysis
+        and geometric measure theory, like the Kakeya and restriction problems.
+        In the near future, I hope to try to learn more on the topics
+        of automorphic forms, ergodic theory,
+        and applications of algebraic geometry to analytic number theory.
 			</p>
 			<p>
 				External to mathematics, I am also interested in formal proof assistants
@@ -44,7 +42,6 @@
 				Outside of academics, I enjoy hiking in nearby mountains,
 				rock climbing and bouldering,
 				and playing/watching football (soccer) and basketball.
-				I also enjoy fooling around with some coding and my linux setup.
 				<a href="https://xkcd.com/356/">This comic sums me up pretty well.</a>
 			</p>
 			<p>
